@@ -1,39 +1,18 @@
 <?php
 /**
- * miniShop
- *
- * Copyright 2010 by Shaun McCormick <shaun+minishop@modx.com>
- *
- * miniShop is free software; you can redistribute it and/or modify it under the
- * terms of the GNU General Public License as published by the Free Software
- * Foundation; either version 2 of the License, or (at your option) any later
- * version.
- *
- * miniShop is distributed in the hope that it will be useful, but WITHOUT ANY
- * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
- * A PARTICULAR PURPOSE. See the GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License along with
- * miniShop; if not, write to the Free Software Foundation, Inc., 59 Temple
- * Place, Suite 330, Boston, MA 02111-1307 USA
- *
- * @package minishop
- */
-/**
  * Update an Goods
  * 
  * @package minishop
  * @subpackage processors
  */
-/* get board */
+
 if (!$modx->hasPermission('save')) {return $modx->error->failure($modx->lexicon('ms.no_permission'));}
 
-// Проверка обязательных полей
 if (empty($_POST['pagetitle'])) {
 	$modx->error->addField('pagetitle',$modx->lexicon('ms.required_field'));
 }
 //if (empty($_POST['parent'])) {
-	//$modx->error->addField('parent',$modx->lexicon('ms.required_field'));
+//	$modx->error->addField('parent',$modx->lexicon('ms.required_field'));
 //}
 if ($modx->error->hasError()) {
     return $modx->error->failure();
@@ -43,15 +22,26 @@ $id = $modx->getOption('id', $_REQUEST, 0);
 $wid = $modx->getOption('wid', $_REQUEST, 0);
 
 if ($modx->getCount('modResource', $id) > 0) {
-	// Обновляем ресурс
+	// Updating resource
 	$response = $modx->runProcessor('resource/update', $_POST);
 	$modx->invokeEvent('OnDocFormSave', $_POST);
 	if ($response->isError()) {
 		return $modx->error->failure($response->getMessage());
 	}
 
+	$miniShop = new miniShop($modx);
+
+	// If resource is deleted - clean records in miniShop and exit
+	if ($_REQUEST['deleted'] == 1) {
+		$response = $modx->runProcessor('mgr/goods/delete', $_REQUEST, array('processors_path' => $miniShop->config['processorsPath']));
+		if ($response->isError()) {
+			return $modx->error->failure($response->getMessage());
+		}
+		return $modx->error->success('', $response->response);
+	}
+
 	$wids = array();
-	// Если обновляем информацию на всех складах сразу - достаем их id
+	// If updating resource on all warehouses - get its ids
 	if ($_REQUEST['duplicate']) {
 		$tmp = $modx->getCollection('ModWarehouse');
 		foreach ($tmp as $v) {
@@ -67,8 +57,6 @@ if ($modx->getCount('modResource', $id) > 0) {
 	else {
 		$wids[] = $wid;
 	}
-
-	$miniShop = new miniShop($modx);
 
 	foreach ($wids as $wid) {
 		$nolog = 0;
@@ -94,7 +82,7 @@ if ($modx->getCount('modResource', $id) > 0) {
 		}
 	}
 	
-	// Защита от дублирования основной и добавочной категории товара
+	// Defence agaid duplicate main category of the product and additionals
 	if ($tmp = $modx->getObject('ModCategories', array('gid' => $id, 'cid' => $_REQUEST['parent']))) {
 		$tmp->remove();
 	}
